--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,35 @@
 img {
-    height: 100vh;
-    width: 100vw;
+    height: 200px;
+    width: 200px;
+    margin-top: 100px;
+}
+
+.gif-container {
+    display: flex;
+    justify-content: center;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type=text] {
+    width: 120px;
+}
+button[type=submit] {
+    width: 128px;
+}
+
+.search-text {
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
 }
